add endpoint to replace all flags for a project
